Use MicroProfile artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,7 @@
                 <configuration>
                     <assemblyArtifact>
                         <groupId>com.ibm.websphere.appserver.runtime</groupId>
-                        <artifactId>wlp-webProfile7</artifactId>
+                        <artifactId>wlp-microProfile1</artifactId>
                         <version>17.0.0.3</version>
                         <type>zip</type>
                     </assemblyArtifact>
