--- a/chart/demo/templates/basedeployment.yaml
+++ b/chart/demo/templates/basedeployment.yaml
@@ -22,7 +22,7 @@ spec:
 {{ else }}
         readinessProbe:
           httpGet:
-            path: /demo/health
+            path: /health
             port: 9080
           initialDelaySeconds: 20
 {{  end }}
