Use MicroProfile config

--- a/chart/demo/templates/deployment.yaml
+++ b/chart/demo/templates/deployment.yaml
@@ -34,3 +34,5 @@ spec:
             value: "{{ .Values.service.servicePort }}"
           - name: APPLICATION_NAME
             value: "{{ .Release.Name }}"
+          - name: property
+            value: "Hello World"
